Refactoring: - Add editor modes - Improve ContextMenuCoreModule - Extract waypoints and connections into separate classes

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,7 @@ canvas {
   min-width: 4em;
   white-space: nowrap;
   cursor: pointer;
+  font-family: sans-serif;
 }
 
 .ContextMenuCoreModule > hr {
